better encryption and actually got the property injection working with @Value